# tinyhal

./: .travis.yml  CMakeLists.txt  Makefile  README.md  doxygen.cfg  library.json  library.properties  tinyhal.pc
.travis/: check_install.sh
src/hal/: tiny_debug.h  tiny_list.c  tiny_list.h  tiny_serial.c  tiny_serial.h  tiny_types.c  tiny_types.h
src/hal/arduino/: arduino_hal.h  arduino_hal.inl
src/hal/avr/: avr_hal.h  avr_hal.inl
src/hal/esp32/: esp32_hal.h  esp32_hal.inl
src/hal/impl/: arduino_hal.inl  avr_hal.inl  esp32_hal.inl  hal_single_core.inl  linux_hal.inl  mingw32_hal.inl  no_platform_hal.inl  win32_hal.inl
src/hal/include/: avr_hal.h  no_platform_hal.h
src/hal/linux/: linux_hal.h  linux_hal.inl  linux_serial.inl
src/hal/mingw32/: mingw32_hal.h  mingw32_hal.inl
src/hal/no_platform/: no_platform_hal.h  no_platform_hal.inl  noplatform_serial.h
src/hal/serial/: linux_serial.inl  win32_serial.inl
src/hal/single_core/: hal_single_core.inl
src/hal/win32/: win32_hal.h  win32_hal.inl  win32_serial.h  win32_serial.inl
unittest/: hal_tests.cpp
